AWS-LB-Controller/ingress/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#tls


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-nginx-ingress
  namespace: default
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target:  /
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.searchapp-svc: '{"Type":"redirect","RedirectConfig": {"Host":"#{host}","Path":"/","Port":"#{port}","Protocol":"#{protocol}","Query":"#{query}","StatusCode":"HTTP_302"}}'
    # ingress.kubernetes.io/ssl-redirect: "true"
    # kubernetes.io/tls-acme: "true"
    # certmanager.k8s.io/issuer: letsencrypt-issued
    # kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: alb
  rules:
  - host: ""
    http:
      paths:
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: searchapp-svc
            port:
              number: 80
